--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+/* .container-fluid {
+    background:url()
+    height: 100vh;
+     background-attachment: fixed;
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+  } */
