Starting Home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
-<p>
-  home works!
-</p>
+<div class="container-fluid center">
+<h1>What Kind of French Fry Are You?</h1>
+
+<button>Start!</button>
+</div>
