Mostly home changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<button class="btn btn-primary" routerLink="/home">Home Page</button>
+<!-- <button class="btn btn-primary" routerLink="/home">Home Page</button>
 <button class="btn btn-primary" routerLink="/question">Question Page</button>
-<button class="btn btn-primary" routerLink="/result">Results Page</button>
+<button class="btn btn-primary" routerLink="/result">Results Page</button> -->
 
 <router-outlet></router-outlet>
