--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid center">
-<h1>What Kind of French Fry Are You?</h1>
+<h1 class="bold mt-5">What Kind of French Fry Are You?</h1>
 
-<button>Start!</button>
+<button class="btn btn-danger mt-5"routerLink="/question">Start!</button>
 </div>
