--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,3 +1,16 @@
-<p>
-  question works!
-</p>
+<div class="row">
+  <div class="col">
+    <h1>question 1 how are you</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <h1> {{ question[0].number }} </h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+<button routerLink="/1" class="btn bg-danger" > go back</button>
+<button routerLink="/2" class="btn bg-success" ></button>
+  </div>
+</div>
