--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid center">
 <h1 class="bold mt-5">What Kind of French Fry Are You?</h1>
 
-<button class="btn btn-danger mt-5"routerLink="/question">Start!</button>
+<button class="btn btn-danger mt-5"routerLink="/question/1">Start!</button>
 </div>
