--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -11,6 +11,6 @@
 <div class="row">
   <div class="col">
 <button routerLink="/1" class="btn bg-danger" > go back</button>
-<button routerLink="/2" class="btn bg-success" ></button>
+<button routerLink="/question/2" class="btn bg-success" >Continue</button>
   </div>
 </div>
