--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid center">
+<div class="container-fluid center main-bg">
 <h1 class="bold p-5">What Kind of French Fry Are You?</h1>
 
 <button class="btn btn-danger mt-5" routerLink="/question/1">Start!</button>
