--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col">
     <h1>question 1 how are you</h1>
   </div>
@@ -14,11 +14,11 @@
 <button routerLink="/2" class="btn bg-success" >Continue</button>
 <p>
   question works!
-</p>
-<div class="container-fluid">
+</p> -->
+<div class="container-fluid second-bg">
   <div class="row">
     <div class="col">
-        <h1 class="text-center">Choose the best answer.</h1>
+        <h1 class="text-center text-white">Choose the best answer.</h1>
     </div>
   </div>
   <div class="row">
@@ -29,8 +29,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col font">
-        <i class="fas fa-long-arrow-alt-left float-left clearfix" routerLink=""></i>
+    <div class="col font text-white">
+        <i class="fas fa-long-arrow-alt-left float-left clearfix" routerLink="HomeComponent"></i>
         <i class="fas fa-long-arrow-alt-right float-right clearfix" routerLink="/question/:2"></i>
     </div>
   </div>
