--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-.container-fluid {
+.main-bg {
     background:url("https://media.tenor.com/images/26e5e80d6150f10442c9e6f0cf642db9/tenor.gif");
     height: 100vh;
      background-attachment: fixed;
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
+  }
+  .second-bg{
+    background: #FFD200;
+    background-size: cover;
+    height: 100vh;
+    
   }
 
   nav {
