--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
-<div class="container-fluid center main-bg">
-<h1 class="bold p-5">What Kind of French Fry Are You?</h1>
-
+<div class="container-fluid center">
+    <div class="row">
+        <div class="col">
+                <h1 class=" mt-5 francois">What kind of fry are you?</h1>
+        </div>
+    </div>
 <button class="btn btn-danger mt-5" routerLink="/question/1">Start!</button>
 </div>
