--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,37 +1,19 @@
-<!-- <div class="row">
-  <div class="col">
-    <h1>question 1 how are you</h1>
-  </div>
-</div>
-<div class="row">
-  <div class="col">
-    <h1> {{ question[0].number }} </h1>
-  </div>
-</div>
-<div class="row">
-  <div class="col">
-<button routerLink="/1" class="btn bg-danger" > go back</button>
-<button routerLink="/2" class="btn bg-success" >Continue</button>
-<p>
-  question works!
-</p> -->
-<div class="container-fluid second-bg">
+<div class="container-fluid color">
   <div class="row">
     <div class="col">
-        <h1 class="text-center text-white">Choose the best answer.</h1>
+        <h1 class="text-center mt-5 francois">Choose the best answer.</h1>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <div *ngFor="let choice of this.quiz.questions[this.cQ].choices">
-        <p>{{ choice.name }}</p>
-      </div>
     </div>
   </div>
   <div class="row">
-    <div class="col font text-white">
-        <i class="fas fa-long-arrow-alt-left float-left clearfix" routerLink="HomeComponent"></i>
-        <i class="fas fa-long-arrow-alt-right float-right clearfix" routerLink="/question/:2"></i>
+    <div class="col font">
+        <i class="fas fa-long-arrow-alt-left" routerLink=""></i>
+    </div>
+    <div class="col font">
+        <i class="fas fa-long-arrow-alt-right" routerLink="/result"></i>
     </div>
   </div>
 </div>
