--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,3 +1,5 @@
-<p>
-  result works!
-</p>
+<div class="row">
+    <div class="col text-align-center">
+      <h1>Results</h1>
+    </div>
+  </div>
