--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,14 +1,75 @@
-<div class="container-fluid color">
+<div class="container-fluid color text-white">
   <div class="row">
     <div class="col">
         <h1 class="text-center mt-5 francois">Choose the best answer.</h1>
     </div>
   </div>
-  <div class="row">
+  <div class="row text-center my-3">
     <div class="col">
+      <img src="https://wallpaperset.com/w/full/0/a/5/241871.jpg" height="200px" >
+      <p class="oswald choices">Soft</p>
+    </div>
+    <div class="col">
+      <h1 class="oswald choices">OR</h1>
+    </div>
+    <div class="col">
+      <img src="http://photos.demandstudios.com/getty/article/152/151/482344622.jpg" height="200px" >
+      <p class="oswald choices">Crispy</p>
     </div>
   </div>
-  <div class="row">
+  <div class="row text-center my-3">
+    <div class="col">
+        <img src="https://asweetlife.org/wp-content/uploads/2017/09/could-engineered-bacteria-implanted-into-human-skin-produce-insulin-3.jpg" height="200px" >
+        <p class="oswald choices">Skin</p>
+    </div>
+    <div class="col">
+      <h1 class="oswald choices">OR</h1>
+    </div>
+    <div class="col">
+        <img src="http://syndaver.com/wp-content/uploads/2013/09/Y-AIR-A-0005-Adult-Airway-no-skin-2.jpg" height="200px" >
+        <p class="oswald choices">No Skin</p>
+    </div>
+  </div>
+  <div class="row text-center my-3">
+      <div class="col">
+          <img src="https://img.taste.com.au/49U6TFb_/taste/2016/11/perfect-potato-chips-79999-1.jpeg" height="200px" >
+        <p class="oswald choices">Thick</p>
+      </div>
+      <div class="col">
+        <h1 class="oswald choices">OR</h1>
+      </div>
+      <div class="col">
+          <img src="https://roadfood.com/wp-content/uploads/2017/01/Zesto-fries.jpg" height="200px" >
+        <p class="oswald choices">Thin</p>
+      </div>
+  </div>
+  <div class="row text-center my-3">
+      <div class="col">
+          <img src="https://img.taste.com.au/RAGxalD6/taste/2016/11/thyme-and-sea-salt-chips-80003-1.jpeg" height="200px" >
+        <p class="oswald choices">Seasoned</p>
+      </div>
+      <div class="col">
+        <h1 class="oswald choices">OR</h1>
+      </div>
+      <div class="col">
+          <img src="https://www.chowstatic.com/assets/recipe_photos/29277_curry_ketchup.jpg" height="200px" >
+        <p class="oswald choices">Not Seasoned</p>
+      </div>
+  </div>
+  <div class="row text-center my-3">
+      <div class="col">
+          <img src="https://images3.alphacoders.com/627/627808.png" height="200px" >
+        <p class="oswald choices">Artistic</p>
+      </div>
+      <div class="col">
+        <h1 class="oswald choices">OR</h1>
+      </div>
+      <div class="col">
+          <img src="http://www.photos-public-domain.com/wp-content/uploads/2012/07/red-diagonal-striped-plastic-texture.jpg" height="200px" >
+        <p class="oswald choices">Simple</p>
+      </div>
+  </div> 
+  <div class="row text-center">
     <div class="col font">
         <i class="fas fa-long-arrow-alt-left" routerLink=""></i>
     </div>
