Result template and Icon change

--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,5 +1,16 @@
-<div class="row">
-    <div class="col text-align-center">
-      <h1>Results</h1>
+<div class="container-fluid color">
+  <div class="row text-center">
+    <div class="col">
+      <h1 class="mt-5 francois">Results</h1>
     </div>
   </div>
+
+  <div class="row text-center">
+    <div class="col font">
+      <i class="fas fa-long-arrow-alt-left" routerLink="/question/1"></i>
+    </div>
+    <div class="col font">
+      <i class="fas fa-long-arrow-alt-right" routerLink=""></i>
+    </div>
+  </div>
+</div>
