added last question

--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -69,6 +69,19 @@
         <p class="oswald choices">Simple</p>
       </div>
   </div> 
+  <div class="row text-center my-3">
+    <div class="col">
+        <img src="https://stemjobs.com/wp-content/uploads/2015/08/17491295860_d7e01571d4_o.jpg" height="200px" >
+      <p class="oswald choices">Spicy</p>
+    </div>
+    <div class="col">
+      <h1 class="oswald choices">OR</h1>
+    </div>
+    <div class="col">
+        <img src="https://i.pinimg.com/originals/6a/c8/c6/6ac8c6b1ad5abbed90593cb83db309dd.jpg" height="200px" >
+      <p class="oswald choices">Not Spicy</p>
+    </div>
+</div> 
   <div class="row text-center">
     <div class="col font">
         <i class="fas fa-long-arrow-alt-left" routerLink=""></i>
