--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -78,3 +78,5 @@
     </div>
   </div>
 </div>
+
+<input [value]="choice.value" type="radio" [(ngModel)]="this.quiz.questions[this.quiz.currentQuestion].selectedAnswer">
