--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -4,31 +4,56 @@
         <h1 class="text-center mt-5 francois">Choose the best answer.</h1>
     </div>
   </div>
-  <form>
-    <div class="row text-center my-3">
+  <div class="row text-center my-3">
+    <div class="col">
+      <img src="https://wallpaperset.com/w/full/0/a/5/241871.jpg" height="200px" >
+      <p class="oswald choices"><input type="radio" value="1" [(ngModel)]="questions[0].selectedAnswer" >Soft</p>
+    </div>
+    <div class="col">
+      <h1 class="oswald choices">OR</h1>
+    </div>
+    <div class="col">
+      <img src="http://photos.demandstudios.com/getty/article/152/151/482344622.jpg" height="200px" >
+      <p class="oswald choices"><input type="radio" value="2" [(ngModel)]="questions[0].selectedAnswer" >Crispy</p>
+    </div>
+  </div>
+  <div class="row text-center my-3">
+    <div class="col">
+        <img src="https://asweetlife.org/wp-content/uploads/2017/09/could-engineered-bacteria-implanted-into-human-skin-produce-insulin-3.jpg" height="200px" >
+        <p class="oswald choices"><input type="radio" value="1" [(ngModel)]="questions[1].selectedAnswer">Skin</p>
+    </div>
+    <div class="col">
+      <h1 class="oswald choices">OR</h1>
+    </div>
+    <div class="col">
+        <img src="http://syndaver.com/wp-content/uploads/2013/09/Y-AIR-A-0005-Adult-Airway-no-skin-2.jpg" height="200px" >
+        <p class="oswald choices"><input type="radio" value="2" [(ngModel)]="questions[1].selectedAnswer">No Skin</p>
+    </div>
+  </div>
+  <div class="row text-center my-3">
       <div class="col">
-        <img src="https://wallpaperset.com/w/full/0/a/5/241871.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" name="first"> Soft</p>
+          <img src="https://img.taste.com.au/49U6TFb_/taste/2016/11/perfect-potato-chips-79999-1.jpeg" height="200px" >
+        <p class="oswald choices"><input type="radio" value="1" [(ngModel)]="questions[2].selectedAnswer">Thick</p>
       </div>
       <div class="col">
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
-        <img src="http://photos.demandstudios.com/getty/article/152/151/482344622.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" name="first"> Crispy</p>
+          <img src="https://roadfood.com/wp-content/uploads/2017/01/Zesto-fries.jpg" height="200px" >
+        <p class="oswald choices"><input type="radio" value="2" [(ngModel)]="questions[2].selectedAnswer">Thin</p>
       </div>
     </div>
     <div class="row text-center my-3">
       <div class="col">
-          <img src="https://asweetlife.org/wp-content/uploads/2017/09/could-engineered-bacteria-implanted-into-human-skin-produce-insulin-3.jpg" height="200px" >
-          <p class="oswald choices"><input type="radio" name="second"> Skin</p>
+          <img src="https://img.taste.com.au/RAGxalD6/taste/2016/11/thyme-and-sea-salt-chips-80003-1.jpeg" height="200px" >
+        <p class="oswald choices"><input type="radio" value="1" [(ngModel)]="questions[3].selectedAnswer">Seasoned</p>
       </div>
       <div class="col">
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
-          <img src="http://syndaver.com/wp-content/uploads/2013/09/Y-AIR-A-0005-Adult-Airway-no-skin-2.jpg" height="200px" >
-          <p class="oswald choices"><input type="radio" name="second"> No Skin</p>
+          <img src="https://www.chowstatic.com/assets/recipe_photos/29277_curry_ketchup.jpg" height="200px" >
+        <p class="oswald choices"><input type="radio" value="2" [(ngModel)]="questions[3].selectedAnswer">Not Seasoned</p>
       </div>
     </div>
     <div class="row text-center my-3">
@@ -72,21 +97,21 @@
     </div> 
     <div class="row text-center my-3">
       <div class="col">
-          <img src="https://stemjobs.com/wp-content/uploads/2015/08/17491295860_d7e01571d4_o.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" name="sixth"> Spicy</p>
+          <img src="https://images3.alphacoders.com/627/627808.png" height="200px" >
+        <p class="oswald choices"><input type="radio" value="1" [(ngModel)]="questions[4].selectedAnswer">Artistic</p>
       </div>
       <div class="col">
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
-          <img src="https://i.pinimg.com/originals/6a/c8/c6/6ac8c6b1ad5abbed90593cb83db309dd.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" name="sixth"> Not Spicy</p>
+          <img src="http://www.photos-public-domain.com/wp-content/uploads/2012/07/red-diagonal-striped-plastic-texture.jpg" height="200px" >
+        <p class="oswald choices"><input type="radio" value="2" [(ngModel)]="questions[4].selectedAnswer">Simple</p>
       </div>
   </div> 
 </form>
   <div class="row text-center">
     <div class="col font">
-        <i class="fas fa-long-arrow-alt-left" routerLink=""></i>
+        <i class="fas fa-long-arrow-alt-left" routerLink="1"></i>
     </div>
     <div class="col font">
         <i class="fas fa-long-arrow-alt-right" routerLink="/result"></i>
@@ -94,4 +119,3 @@
   </div>
 </div>
 
-<input [value]="choice.value" type="radio" [(ngModel)]="this.quiz.questions[this.quiz.currentQuestion].selectedAnswer">
