Question logic, results.

--- a/src/app/question/question.component.css
+++ b/src/app/question/question.component.css
@@ -8,9 +8,9 @@
     background: #FFD200;
     height: 100%;
 }
-img:hover { 
+/* img:hover { 
     opacity: 0.5;
-}
+} */
 .choices {
     font-size: 2em;
 }
