--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,59 +1,59 @@
 <div class="container-fluid color text-white">
   <div class="row">
     <div class="col">
-        <h1 class="text-center mt-5 francois">Choose the best answer.</h1>
+        <h1 class="text-center mt-5 francois">Choose the best answer!</h1>
     </div>
   </div>
   <div class="row text-center my-3">
     <div class="col">
       <img src="https://wallpaperset.com/w/full/0/a/5/241871.jpg" height="200px" >
-      <p class="oswald choices"><input type="radio" value="1" name="first" [(ngModel)]="quiz.questions[0].selectedAnswer">Soft</p>
+      <p class="oswald choices"><input type="radio" value="1" name="first" [(ngModel)]="quiz.questions[0].selectedAnswer"> Soft</p>
     </div>
     <div class="col">
       <h1 class="oswald choices">OR</h1>
     </div>
     <div class="col">
       <img src="http://photos.demandstudios.com/getty/article/152/151/482344622.jpg" height="200px" >
-      <p class="oswald choices"><input type="radio" value="2" name="first" [(ngModel)]="quiz.questions[0].selectedAnswer">Crispy</p>
+      <p class="oswald choices"><input type="radio" value="2" name="first" [(ngModel)]="quiz.questions[0].selectedAnswer"> Crispy</p>
     </div>
   </div>
   <div class="row text-center my-3">
     <div class="col">
         <img src="https://asweetlife.org/wp-content/uploads/2017/09/could-engineered-bacteria-implanted-into-human-skin-produce-insulin-3.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" value="1" name="second" [(ngModel)]="quiz.questions[1].selectedAnswer">Skin</p>
+        <p class="oswald choices"><input type="radio" value="1" name="second" [(ngModel)]="quiz.questions[1].selectedAnswer"> Skin</p>
     </div>
     <div class="col">
       <h1 class="oswald choices">OR</h1>
     </div>
     <div class="col">
         <img src="http://syndaver.com/wp-content/uploads/2013/09/Y-AIR-A-0005-Adult-Airway-no-skin-2.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" value="2" name="second" [(ngModel)]="quiz.questions[1].selectedAnswer">No Skin</p>
+        <p class="oswald choices"><input type="radio" value="2" name="second" [(ngModel)]="quiz.questions[1].selectedAnswer"> No Skin</p>
     </div>
   </div>
   <div class="row text-center my-3">
       <div class="col">
           <img src="https://img.taste.com.au/49U6TFb_/taste/2016/11/perfect-potato-chips-79999-1.jpeg" height="200px" >
-        <p class="oswald choices"><input type="radio" value="1" name="third" [(ngModel)]="quiz.questions[2].selectedAnswer">Thick</p>
+        <p class="oswald choices"><input type="radio" value="1" name="third" [(ngModel)]="quiz.questions[2].selectedAnswer"> Thick</p>
       </div>
       <div class="col">
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
           <img src="https://roadfood.com/wp-content/uploads/2017/01/Zesto-fries.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" value="2" name="third" [(ngModel)]="quiz.questions[2].selectedAnswer">Thin</p>
+        <p class="oswald choices"><input type="radio" value="2" name="third" [(ngModel)]="quiz.questions[2].selectedAnswer"> Thin</p>
       </div>
     </div>
     <div class="row text-center my-3">
       <div class="col">
           <img src="https://img.taste.com.au/RAGxalD6/taste/2016/11/thyme-and-sea-salt-chips-80003-1.jpeg" height="200px" >
-        <p class="oswald choices"><input type="radio" value="1" name="fourth" [(ngModel)]="quiz.questions[3].selectedAnswer">Seasoned</p>
+        <p class="oswald choices"><input type="radio" value="1" name="fourth" [(ngModel)]="quiz.questions[3].selectedAnswer"> Seasoned</p>
       </div>
       <div class="col">
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
           <img src="https://www.chowstatic.com/assets/recipe_photos/29277_curry_ketchup.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" value="2" name="fourth" [(ngModel)]="quiz.questions[3].selectedAnswer">Not Seasoned</p>
+        <p class="oswald choices"><input type="radio" value="2" name="fourth" [(ngModel)]="quiz.questions[3].selectedAnswer"> Not Seasoned</p>
       </div>
     </div>
     <div class="row text-center my-3">
@@ -72,14 +72,14 @@
     <div class="row text-center my-3">
       <div class="col">
           <img src="https://www.chowstatic.com/assets/recipe_photos/30210_grilled_shishito_peppers.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" value="1" name="sixth" [(ngModel)]="quiz.questions[5].selectedAnswer">Spicy</p>
+        <p class="oswald choices"><input type="radio" value="1" name="sixth" [(ngModel)]="quiz.questions[5].selectedAnswer"> Spicy</p>
       </div>
       <div class="col">
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
           <img src="http://photos.demandstudios.com/getty/article/69/8/185747043.jpg" height="200px" >
-        <p class="oswald choices"><input type="radio" value="2" name="sixth" [(ngModel)]="quiz.questions[5].selectedAnswer">Not Spicy</p>
+        <p class="oswald choices"><input type="radio" value="2" name="sixth" [(ngModel)]="quiz.questions[5].selectedAnswer"> Not Spicy</p>
       </div>
   </div> 
 
@@ -88,7 +88,7 @@
         <i class="fas fa-long-arrow-alt-left" routerLink=""></i>
     </div>
     <div class="col font">
-        <i class="fas fa-long-arrow-alt-right" routerLink="/result"></i>
+        <i class="fas fa-long-arrow-alt-right" (click)= "quiz.calculateResult()" routerLink="/result"></i>
     </div>
   </div>
 </div>
