--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,16 +1,18 @@
-<div class="container-fluid color">
+<div class="container-fluid color text-white">
   <div class="row text-center">
     <div class="col">
       <h1 class="mt-5 francois">Results</h1>
+      <p>{{ quiz.theTruth }}</p>
+      <img  height="500px" src="{{ quiz.img}}">
+      <p class="mt-3"> {{ quiz.fryDescription }}</p>
+
+      <a href="https://media.giphy.com/media/Hzhkf0esHVMhW/giphy.gif" class="">Don't Click Here</a>
     </div>
   </div>
 
   <div class="row text-center">
     <div class="col font">
-      <i class="fas fa-long-arrow-alt-left" routerLink="/question/1"></i>
-    </div>
-    <div class="col font">
-      <i class="fas fa-long-arrow-alt-right" routerLink=""></i>
+      <i class="fas fa-undo"(click) = "quiz.resetValues()" routerLink=""></i>
     </div>
   </div>
 </div>
