--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -78,7 +78,7 @@
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
-          <img src="http://photos.demandstudios.com/getty/article/69/8/185747043.jpg" height="200px" >
+          <img src="https://fortunedotcom.files.wordpress.com/2016/08/103060861.jpg" height="200px" >
         <p class="oswald choices"><input type="radio" value="2" name="sixth" [(ngModel)]="quiz.questions[5].selectedAnswer"> Not Spicy</p>
       </div>
   </div> 
