--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -2,16 +2,16 @@
   <div class="row text-center">
     <div class="col">
       <h1 class="mt-5 francois">Results</h1>
-      <p>{{ quiz.theTruth }}</p>
+      <p class="oswald font">{{ quiz.theTruth }}</p>
       <img  height="500px" src="{{ quiz.img}}">
-      <p class="mt-3"> {{ quiz.fryDescription }}</p>
+      <p class="mt-3 oswald font"> {{ quiz.fryDescription }}</p>
 
-      <a href="https://media.giphy.com/media/Hzhkf0esHVMhW/giphy.gif" class="">Don't Click Here</a>
+      <a href="https://media.giphy.com/media/Hzhkf0esHVMhW/giphy.gif" class="oswald">Don't Click Here</a>
     </div>
   </div>
 
   <div class="row text-center">
-    <div class="col font">
+    <div class="col icon">
       <i class="fas fa-undo"(click) = "quiz.resetValues()" routerLink=""></i>
     </div>
   </div>
