--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,84 +1,85 @@
 <div class="container-fluid color text-white">
   <div class="row">
     <div class="col">
-        <h1 class="text-center mt-5 francois">Choose the best answer!</h1>
+        <h1 class="text-center mt-5 francois">Choose the best answer</h1>
+        <h3 class="text-center francois">between the two choices</h3>
     </div>
   </div>
-  <div class="row text-center my-3">
+  <div class="row text-center my-5">
     <div class="col">
-      <img src="/assets/soft.jpg" height="200px" >
+      <img src="https://i.imgur.com/fxXrGD8.jpg" height="200px" >
       <p class="oswald choices"><input type="radio" value="1" name="first" [(ngModel)]="quiz.questions[0].selectedAnswer"> Soft</p>
     </div>
-    <div class="col">
+    <div>
       <h1 class="oswald choices">OR</h1>
     </div>
     <div class="col">
-      <img src="/assets/crispy.jpg" height="200px" >
+      <img src="https://i.imgur.com/RVkxrdZ.jpg" height="200px" >
       <p class="oswald choices"><input type="radio" value="2" name="first" [(ngModel)]="quiz.questions[0].selectedAnswer"> Crispy</p>
     </div>
   </div>
-  <div class="row text-center my-3">
+  <div class="row text-center my-5">
     <div class="col">
-        <img src="/assets/skin.jpg" height="200px" >
+        <img src="https://i.imgur.com/p6jRqXM.jpg" height="200px" >
         <p class="oswald choices"><input type="radio" value="1" name="second" [(ngModel)]="quiz.questions[1].selectedAnswer"> Skin</p>
     </div>
-    <div class="col">
+    <div>
       <h1 class="oswald choices">OR</h1>
     </div>
     <div class="col">
-        <img src="/assets/noSkin.jpg" height="200px" >
+        <img src="https://i.imgur.com/csdMZ6v.jpg" height="200px" >
         <p class="oswald choices"><input type="radio" value="2" name="second" [(ngModel)]="quiz.questions[1].selectedAnswer"> No Skin</p>
     </div>
   </div>
-  <div class="row text-center my-3">
+  <div class="row text-center my-5">
       <div class="col">
           <img src="/assets/thicc.jpeg" height="200px" >
         <p class="oswald choices"><input type="radio" value="1" name="third" [(ngModel)]="quiz.questions[2].selectedAnswer"> Thick</p>
       </div>
-      <div class="col">
+      <div>
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
-          <img src="/assets/thin.jpg" height="200px" >
+          <img src="https://i.imgur.com/LhlVm9w.jpg" height="200px" >
         <p class="oswald choices"><input type="radio" value="2" name="third" [(ngModel)]="quiz.questions[2].selectedAnswer"> Thin</p>
       </div>
     </div>
-    <div class="row text-center my-3">
+    <div class="row text-center my-5">
       <div class="col">
           <img src="/assets/seasoned.jpeg" height="200px" >
         <p class="oswald choices"><input type="radio" value="1" name="fourth" [(ngModel)]="quiz.questions[3].selectedAnswer"> Seasoned</p>
       </div>
-      <div class="col">
+      <div>
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
-          <img src="/assets/notSeasoned.jpg" height="200px" >
+          <img src="https://i.imgur.com/SVMT8Ox.jpg" height="200px" >
         <p class="oswald choices"><input type="radio" value="2" name="fourth" [(ngModel)]="quiz.questions[3].selectedAnswer"> Not Seasoned</p>
       </div>
     </div>
-    <div class="row text-center my-3">
+    <div class="row text-center my-5">
       <div class="col">
-          <img src="/assets/Artistic.png" height="200px" >
+          <img src="https://i.imgur.com/aTnAtSE.png" height="200px" >
         <p class="oswald choices"><input type="radio" value="1" name="fifth" [(ngModel)]="quiz.questions[4].selectedAnswer"> Artistic</p>
       </div>
-      <div class="col">
+      <div>
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
-          <img src="/assets/simple.jpg" height="200px" >
+          <img src="https://i.imgur.com/sTHCUlF.jpg" height="200px" >
         <p class="oswald choices"><input type="radio" value="2" name="fifth" [(ngModel)]="quiz.questions[4].selectedAnswer"> Simple</p>
       </div>
   </div> 
-    <div class="row text-center my-3">
+    <div class="row text-center my-5">
       <div class="col">
-          <img src="/assets/spicy.jpg" height="200px" >
+          <img src="https://i.imgur.com/o4Qxr4M.jpg" height="200px" >
         <p class="oswald choices"><input type="radio" value="1" name="sixth" [(ngModel)]="quiz.questions[5].selectedAnswer"> Spicy</p>
       </div>
-      <div class="col">
+      <div>
         <h1 class="oswald choices">OR</h1>
       </div>
       <div class="col">
-          <img src="/assets/bland.jpg" height="200px" >
+          <img src="https://i.imgur.com/SVMT8Ox.jpg" height="200px" >
         <p class="oswald choices"><input type="radio" value="2" name="sixth" [(ngModel)]="quiz.questions[5].selectedAnswer"> Not Spicy</p>
       </div>
   </div> 
